--- a/libengagement/libengagement.csproj
+++ b/libengagement/libengagement.csproj
@@ -3,10 +3,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F83A2743-87DA-4A80-AE98-1CB18D8E58C4}</ProjectGuid>
+    <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <ProjectGuid>{8DB2F4CF-C11A-4DFF-BA5B-6FE791ECF20C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>libengagement</RootNamespace>
     <AssemblyName>libengagement</AssemblyName>
+    <TargetFrameworkProfile>Profile78</TargetFrameworkProfile>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -28,16 +30,23 @@
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="EngagementSlice.cs" />
     <Compile Include="Blackbox.cs" />
+    <Compile Include="EngagementSlice.cs" />
+    <Compile Include="EngagementVerdict.cs" />
     <Compile Include="Slice.cs" />
     <Compile Include="SubjectSlice.cs" />
     <Compile Include="VerdictMap.cs" />
-    <Compile Include="EngagementVerdict.cs" />
+    <Compile Include="SubjectSlicesParser.cs" />
+    <Compile Include="VerdictMapsParser.cs" />
   </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
+  <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\portable-net45+wp80+win8+wpa81+aspnetcore50\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
